@@ -6,8 +6,8 @@ import java.util.List;
 public class TrawaFlat extends Province {
     private List<String> resources         = Arrays.asList("bydło", "konie");
     private String       type              = "TrawaFlat";
-    private List<String> possibleBuildings = Arrays.asList("Hodowla krów", "Hodowla świń", "Hodowla koni");
-    private List<String> baseBuildings     = List.of("Farma");
+    private List<String> possibleBuildings = Arrays.asList("Cow Breeding", "Pig Breeding", "Horses Breeding");
+    private List<String> baseBuildings     = List.of("Farm");
 
     public TrawaFlat() {
         setResources(resources);
